Update edu info and portfolio

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
-          </li>
+          </li> -->
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
@@ -306,7 +306,7 @@
           - testimonials
         -->
 
-        <section class="testimonials">
+        <!-- <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -445,7 +445,7 @@
 
             </div>
 
-          </section>
+          </section> -->
 
         </div>
 
@@ -454,7 +454,7 @@
           - clients
         -->
 
-        <section class="clients">
+        <!-- <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -498,7 +498,7 @@
 
           </ul>
 
-        </section>
+        </section> -->
 
       </article>
 
@@ -530,41 +530,36 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">University of Sydney</h4>
 
-              <span>2007 — 2008</span>
+              <span>2022 — 2023</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Master of Philosophy (MPhil) in Natrual Language Processing.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">University of Sydney</h4>
 
-              <span>2006 — 2007</span>
+              <span>2020 — 2021</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Graduate Diploma in Computing with Postgraduate Prize for Outstanding Academic Achievement.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">University of New South Wales</h4>
 
-              <span>2002 — 2004</span>
+              <span>2016 — 2020</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Bachelor of Engineering (Honours) in Electrical and Electronics Engineering.
               </p>
 
             </li>
@@ -587,42 +582,38 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Casual Academic</h4>
 
-              <span>2015 — Present</span>
+              <span>2022 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Casual Academic at University of Sydney (COMP5703, COMP5046, ENGG1810) and University of Technology Sydney (36118).
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Summer Research Intern</h4>
 
-              <span>2013 — 2015</span>
+              <span>2021 — 2022</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Funded by Tom Yim Foundation Scholarship at University of Sydney. Implemented experiments about large language models and performed timely reporting to the supervisor.
+                Built Vision-Language Application Programming Interface research with senior PhD candidates in USYDNLP Group.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Electronic Engineer Intern</h4>
 
-              <span>2010 — 2013</span>
+              <span>2018 — 2019</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Quickly learned new skills and applied them to a Reflow Oven Design Project, improving efficiency and productivity.
+                Carried out both hardware and software duties in both Embedded System and User Interface designs accurately and efficiently.
               </p>
 
             </li>
@@ -640,33 +631,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
+                <h5 class="h5">Natrual Language Processing</h5>
                 <data value="90">90%</data>
               </div>
 
@@ -679,12 +644,38 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
+                <h5 class="h5">Deep Learning</h5>
+                <data value="80">80%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Web development</h5>
+                <data value="80">80%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Data Analysis</h5>
+                <data value="70">70%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
 
             </li>
@@ -718,16 +709,16 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Research publication</button>
             </li>
 
-            <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+            <!-- <li class="filter-item">
+              <button data-filter-btn>Open Source Project</button>
             </li>
 
             <li class="filter-item">
               <button data-filter-btn>Web development</button>
-            </li>
+            </li> -->
 
           </ul>
 
@@ -750,16 +741,16 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Research publication</button>
               </li>
 
-              <li class="select-item">
-                <button data-select-item>Applications</button>
+              <!-- <li class="select-item">
+                <button data-select-item>Open Source Project</button>
               </li>
 
               <li class="select-item">
                 <button data-select-item>Web development</button>
-              </li>
+              </li> -->
 
             </ul>
 
@@ -767,25 +758,25 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="research publication">
+              <a href="https://dl.acm.org/doi/abs/10.1145/3539597.3573039">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/project-1.png" alt="PiggyBack" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">PiggyBack</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Research publication</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <!-- <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
 
                 <figure class="project-img">
@@ -927,7 +918,7 @@
                 <p class="project-category">Web development</p>
 
               </a>
-            </li>
+            </li> -->
 
           </ul>
 
@@ -943,7 +934,7 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="blog">
+      <!-- <article class="blog" data-page="blog">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
@@ -1125,7 +1116,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
 
 
@@ -1144,9 +1135,10 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6624.090515280375!2d151.18265814611536!3d-33.888488242876164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12b1d68b43debd%3A0x45cb8629ea7495e4!2sFaculty%20of%20Engineering%20(J12)%2C%20University%20of%20Sydney%20(USYD)!5e0!3m2!1sen!2sau!4v1682901713876!5m2!1sen!2sau"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
+          
         </section>
 
         <section class="contact-form">
